--- a/index.html
+++ b/index.html
@@ -8,5 +8,15 @@
     <link rel="stylesheet" href="../css/style.css" />
     <script src="./js/script.js" type="module" defer></script>
   </head>
-  <body></body>
+  <body>
+    <form>
+      <h1>ForkIt message app</h1>
+      <div id="messages"></div>
+
+      <div id="sendMsg">
+        <input type="text" id="msgTxt" placeholder="ENTER YOUR MSG..." />
+        <input type="submit" id="msgBtn" value="send" />
+      </div>
+    </form>
+  </body>
 </html>
