--- a/index.html
+++ b/index.html
@@ -14,8 +14,8 @@
       <div id="messages"></div>
 
       <div id="sendMsg">
-        <input type="text" id="msgTxt" placeholder="ENTER YOUR MSG..." />
-        <input type="submit" id="msgBtn" value="send" />
+        <input type="text" id="msgTxt" placeholder="Write your message here..." />
+        <input type="submit" id="msgBtn" value="Send" />
       </div>
     </form>
   </body>
