--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
   <body>
     <form>
       <h1>ForkIt message app</h1>
+      <div class="lds-hourglass"></div>
       <div id="messages"></div>
 
       <div id="sendMsg">
