--- a/index.html
+++ b/index.html
@@ -6,11 +6,14 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>vh-slutprojekt</title>
     <link rel="stylesheet" href="./css/style.css" />
+    <link
+    rel="stylesheet"
+    href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"/>
     <script src="./js/script.js" type="module" defer></script>
   </head>
   <body>
     <form>
-      <h1>ForkIt message app</h1>
+      <h1 class="animate__animated animate__zoomInDown">ForkIt message app</h1>
       <div class="lds-hourglass"></div>
       <div id="messages"></div>
 
